#
# libipmeta
#
# Alistair King, CAIDA, UC San Diego
# corsaro-info@caida.org
#
# Copyright (C) 2012 The Regents of the University of California.
#
# This file is part of libipmeta.
#
# libipmeta is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# libipmeta is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with libipmeta.  If not, see <http://www.gnu.org/licenses/>.
#

AM_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/common -I$(top_srcdir)/libipmeta \
	-I$(top_srcdir)/libipmeta/datastructures \
	-I$(top_srcdir)/libipmeta/providers

dist_bin_SCRIPTS =

bin_PROGRAMS =

#cors2ascii_SOURCES = \
#	cors2ascii.c
#cors2ascii_LDADD = -llibipmeta
#cors2ascii_LDFLAGS = -L$(top_builddir)/liblibipmeta

ACLOCAL_AMFLAGS = -I m4

CLEANFILES = *~
